# Soft-Body-Physics-Engine

./: .gitignore  README.md
cpp_implementation/: CMakeLists.txt
cpp_implementation/include/: Physics.hpp
cpp_implementation/src/: main.cpp
python_prototype/: main.py
